--- a/work16/index.css
+++ b/work16/index.css
@@ -1,33 +1,40 @@
 .box{
-    width:350px;
-    height:350px;
-    border:1px solid #ccc;
-    position:relative
+    width: 350px;
+    height: 350px;
+    border: 1px solid #ccc;
+    position: relative;
 }
+
 .big{
-    width:400px;
-    height:400px;
-    position:absolute;
-    top:0;left:360px;
-    border:1px solid #ccc;
-    overflow:hidden;
-    display:none
+    width: 400px;
+    height: 400px;
+    position: absolute;
+    top: 0;
+    left: 360px;
+    border: 1px solid #ccc;
+    overflow: hidden;
+    display: none;
 }
+
 .mask{
-    width:175px;
-    height:175px;
-    background:rgba(255,255,0,.4);
-    position:absolute;
-    top:0;left:0;
-    cursor:move;
-    display:none
+    width: 175px;
+    height: 175px;
+    background: rgba(255, 255, 0, .4);
+    position: absolute;
+    top: 0;
+    left: 0;
+    cursor: move;
+    display: none;
 }
+
 .small{
-    position:relative
+    position: relative;
 }
+
 .box img{
-    vertical-align:top
+    vertical-align: top;
 }
-#bigBox img{
-    position:absolute
+
+#bigBox img {
+    position: absolute;
 }
