--- a/work20/index.css
+++ b/work20/index.css
@@ -1,7 +1,13 @@
-ul {
-    list-style:none;
+ul{
+    list-style: none;
     padding: 0;
     margin: 0;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0
 }
 
 p {
@@ -12,6 +18,7 @@ p {
 div {
     width: 150px;
     border: 1px solid #515E7B;
+    margin: 10px;
 }
 
 div li {
